--- a/core/server/views/partials/navbar.hbs
+++ b/core/server/views/partials/navbar.hbs
@@ -16,7 +16,7 @@
                     <li class="divider"></li>
                     <li class="usermenu-help"><a href="http://ghost.org/forum/">Help / Support</a></li>
                     <li class="divider"></li>
-                    <li class="usermenu-signout"><a href="/signout/">Sign Out</a></li>
+                    <li class="usermenu-signout"><a href="/ghost/signout/">Sign Out</a></li>
                 </ul>
             </li>
         </ul>
