Ember Data with Posts
Ref #2699

- Introduce ember data dependency
- Add loadInitializers and refactor most initializers into one combined
- Add Post ember data model
- Refactor generateSlug to use title of post and ghostPaths
- Refactor post controller to not reference model.property everywhere
- Use RESTAdapter for posts, users and tags
- Setup author and tag relations in Post model
- Fix broken API calls by adding CSRF header
- Add initiaizer for csrf value
- Use actual User model for current user initializer
- Add action for setting featured post, test with actual api call
- Fix the sending of UUID's up to the server
- Refactor current-user to use ember-data store
- If a user is preloaded in the application, use pushPayload to put it
in the store
- Do a lookup on the store to get an actual User model for injection
- Fix posts/post controllerName in route/new.js
- Alter signup process to push user into ember data store

--- a/core/client/templates/-floating-header.hbs
+++ b/core/client/templates/-floating-header.hbs
@@ -1,7 +1,7 @@
 <header class="floatingheader">
     <button class="button-back" href="#">Back</button>
     {{!-- @TODO: add back title updates depending on featured state --}}
-    <a {{bind-attr class="featured:featured:unfeatured"}} href="#" title="Feature this post">
+    <a {{bind-attr class="featured:featured:unfeatured"}} href="#" title="Feature this post" {{action "toggleFeatured"}}>
         <span class="hidden">Star</span>
     </a>
     <small>
