--- a/core/server/views/default-ember.hbs
+++ b/core/server/views/default-ember.hbs
@@ -40,7 +40,12 @@
     <script src="/ghost/scripts/ghost-dev-ember.js"></script>
 
     <script>
-    window.App = require('ghost/app')['default'].create();
+    window.ENV = {
+        {{#user}}
+        user: {{{this}}}
+        {{/user}}
+    };
+    window.App = require('ghost/app')['default'].create(window.ENV);
     </script>
 </body>
 </html>
